20220607: modify pod_route and request to add pod request struct
